nginx/prd/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: voucher-management-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
  - host: demo.devplify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-k8s-service
            port:
              number: 3000
      - path: /oauth/callback
        pathType: Prefix
        backend:
          service:
            name: web-k8s-service
            port:
              number: 3000
      - path: /api/core
        pathType: Prefix
        backend:
          service:
            name: core-k8s-service
            port:
              number: 8081
      - path: /api/feeds
        pathType: Prefix
        backend:
          service:
            name: feed-k8s-service
            port:
              number: 8082
      - path: /api/audit
        pathType: Prefix
        backend:
          service:
            name: audit-k8s-service
            port:
              number: 8084
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: auth-k8s-service
            port:
              number: 8083
